Migrate configuration to Butane config

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,14 +1,14 @@
 ---
+variant: flatcar
+version: 1.0.0
 storage:
   files:
     - path: /etc/hostname
-      filesystem: root
       mode: 0644
       contents:
         inline: ${hostname}
 
     - path: /etc/systemd/resolved.conf.d/00-default-dns-servers.conf
-      filesystem: root
       mode: 0644
       contents:
         inline: |
@@ -16,7 +16,6 @@ storage:
           DNS=${dns_servers}
 
     - path: /etc/flatcar/update.conf
-      filesystem: root
       mode: 0644
       contents:
         inline: |
@@ -26,14 +25,12 @@ storage:
           REBOOT_STRATEGY=reboot
 
     - path: /etc/crictl.yaml
-      filesystem: root
       mode: 0644
       contents:
         inline: |
           runtime-endpoint: unix:///run/containerd/containerd.sock
 
     - path: /opt/bin/reprovision
-      filesystem: root
       mode: 0755
       contents:
         inline: |
@@ -45,7 +42,6 @@ storage:
           touch /boot/flatcar/first_boot
 
     - path: /opt/sbin/get-metadata.sh
-      filesystem: root
       mode: 0755
       contents:
         inline: |
@@ -67,22 +63,21 @@ storage:
           COREOS_CUSTOM_PUBLIC_IPV6=$(echo $metadata_result | jq -r '.interfaces[]|select(."network-type"=="public").ipv6.address')
           EOF
 
-#########################################################################
-networkd:
-  units:
-    - name: 00-eth0.network
-      contents: |
-        [Match]
-        Name=eth0
+    - path: /etc/systemd/network/00-eth0.network
+      overwrite: true
+      contents:
+        inline: |
+          [Match]
+          Name=eth0
 
-        [Network]
-        DHCP=yes
+          [Network]
+          DHCP=yes
 
-        [DHCPv4]
-        UseDNS=no
+          [DHCPv4]
+          UseDNS=no
 
-        [DHCPv6]
-        UseDNS=no
+          [DHCPv6]
+          UseDNS=no
 
 #########################################################################
 systemd:
